# py-faceblur

./: .gitignore  DEV_GUIDE.md  README.md  main.py  pyproject.toml
src/faceblur/: __init__.py  app.py  blur.py  cli.py  cluster.py  detect.py  detect_yunet.py  encode.py  output.py  video.py
