[project]
name = "py-faceblur"
version = "1.0.0"
description = "Interactive CLI for face detection, clustering, and blurring in video"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uniface",
    "numpy",
    "opencv-python",
    "scikit-learn>=1.3.0",
    "rich",
    "questionary",
]

[project.scripts]
pyfaceblur = "faceblur.app:run"
pyfaceblur-legacy = "faceblur.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/faceblur"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
